# sofa

./: .gitignore  CMakeLists.txt  ci-test.txt
applications/packagesNG/: CMakeLists.txt
applications/packagesNG/SofaAllComponents/: CMakeLists.txt
applications/packagesNG/SofaBase/: CMakeLists.txt  init.cpp
applications/plugins/: CMakeLists.txt
applications/plugins/PluginExample/: CMakeLists.txt
applications/plugins/PluginExample/src/: MyBehaviorModel.cpp  MyDataWidgetUnsigned.cpp  MyMappingPendulumInPlane.cpp  MyProjectiveConstraintSet.cpp
applications/plugins/PluginExample/tests/: CMakeLists.txt  MyDataEngine_test.cpp
applications/plugins/SofaCoreAsync/Sofa/Core/Async/: AsyncComponentTracker.h  CMakeLists.txt  ComponentTracker.h  README.md  Sofa.Core.AsyncConfig.cmake.in  config.h  initPlugin.h
applications/plugins/SofaCoreAsync/Sofa/Core/Async/tests/: AsyncComponentTracker_test.cpp  CMakeLists.txt  ComponentTracker_test.cpp
applications/plugins/SofaImplicitField/: CMakeLists.txt  SofaImplicitFieldConfig.cmake.in  config.h.in  initSofaImplicitField.cpp
applications/plugins/SofaImplicitField/SofaImplicitField_test/: CMakeLists.txt  CustomField_test.cpp  ImplicitShape_test.cpp
applications/plugins/SofaImplicitField/components/geometry/: CustomField.cpp  CustomField.h  DiscreteGridField.cpp  DiscreteGridField.h  ImplicitSurfaceContainer.h  InterpolatedImplicitSurface.h  ScalarField.h  SphericalField.cpp  SphericalField.h  SurfaceMeshGenerationFromScalarField.cpp  SurfaceMeshGenerationFromScalarField.h
applications/plugins/SofaImplicitField/components/mapping/: ImplicitSurfaceMapping.h
applications/plugins/SofaImplicitField/components/visual/: ImplicitFieldShaderVisualization.cpp  ImplicitFieldShaderVisualization.h  ImplicitFieldShaderVisualization.inl  PointCloudImplicitFieldVisualization.cpp  PointCloudImplicitFieldVisualization.h
applications/plugins/SofaImplicitField/core/: componenttracker.h
applications/plugins/SofaImplicitField/examples/: CustomField.scn  CustomFieldAllInOne.scn  CustomFieldVisualization.scn  CustomField_cython.scn  CustomField_glsl.scn  CustomField_python.scn  CustomShaderField.pyscn  CustomShaderField.scn  README.md  ShapeTreeDemo1.psl  ShapeTreeDemo2.psl  accordion.cpp  accordion.pyx  customfield.py  customfield_cython.py  customfield_glsl.py  customfield_python.py  customshape.py  cythonfield.pyx  dfgeom.psl  dfgeom.pyx  generate_expression.py  litteral.cpp  minipsl.py  primitives.cpp  primitives.pxd  primitives.pyx  script.py  script.sh  script2.py  setup.py  setupLitteral.py
applications/plugins/SofaImplicitField/examples/cython/: customfield.py  cythonfield.pyx
applications/plugins/SofaImplicitField/examples/shaders/: implicitFieldRenderer01.frag  implicitFieldRenderer01.vert
applications/plugins/SofaImplicitField/python/: testmodule.py
applications/plugins/SofaImplicitField/python/difigeometry/: Makefile  expression.py  expression2D.py  expressionToString.py
applications/plugins/SofaImplicitField/python/difigeometry/pyxsrc/: primitives.pxd  primitives.pyx  primitives2D.pyx
applications/pluginsNG/: CMakeLists.txt  README.md
applications/pluginsNG/Sofa/: CMakeLists.txt  SofaConfig.cmake.in  test1.scn
applications/pluginsNG/Sofa/Haptics/: CMakeLists.txt  init.cpp
applications/pluginsNG/Sofa/Loader/: CMakeLists.txt
applications/pluginsNG/Sofa/Loader/Mesh/: CMakeLists.txt  OBJLoader.cpp  init.cpp
applications/pluginsNG/Sofa/Loader/Voxel/: CMakeLists.txt
applications/pluginsNG/Sofa/Mechanics/: CMakeLists.txt
applications/pluginsNG/Sofa/Mechanics/FEM/: CMakeLists.txt  Sofa.Mechanics.FEMConfig.cmake.in
applications/pluginsNG/Sofa/Mechanics/Rigid/: CMakeLists.txt
applications/pluginsNG/SoftRobots/: CMakeLists.txt  init.cpp
applications/pluginsNG/SoftRobots/Actuators/: CMakeLists.txt  SoftRobots.CollisionConfig.cmake.in  init.cpp
applications/pluginsNG/SoftRobots/ForceFields/: CMakeLists.txt  init.cpp
examples/Demos/: caduceus.scn.qglviewer.view
modules/SofaBoundaryCondition/: AffineMovementConstraint.inl  FixedConstraint.inl  FixedPlaneConstraint.inl  FixedTranslationConstraint.inl  LinearMovementConstraint.inl  (+9 more)
modules/SofaNonUniformFem/: CMakeLists.txt  HexahedronCompositeFEMMapping.cpp  SparseGridRamificationTopology.h
modules/SofaUserInteraction/: CMakeLists.txt  MouseInteractor.cpp  SleepController.cpp
tools/geneticalgo/: CMakeLists.txt  Makefile  SOFIA.py  controller.py  crochet.py  customfield.py  fragmentCodePartOne  fragmentCodePartTwo  geneticAlgorithm.pxd.py  main.cpp  primitives.pyx  sceneTest.pyscn  shape.py  shapegenerator.py  test_crochet.py  webGLJSCode
tools/geneticalgo/geneticalgo/: Makefile  __init__.py  algorithm.py  crochet.py  crochetInFile.py  customfield.py  display_shape.py  expression.py  expression2D.py  expressionToString.py  generate_expression.py  primitives.pxd  primitives.pyx  primitives2D.pxd  primitives2D.pyx  script2.py  setup.py  setupBasic.py  shapewriter.py  test_crochet.py  test_primitives.py  triangulation.py
tools/geneticalgo/geneticalgo/primitives/: primitives.pxd  primitives.pyx  primitives2D.pxd  primitives2D.pyx
tools/geneticalgo/geneticalgo/pyxsrc/: distance.pxd  distance.pyx  distance2.pyx  piecewisePolynom2D.pxd  piecewisePolynom2D.pyx  primitives.pyx  primitives2D.pxd  primitives2D.pyx
tools/geneticalgo/scenes/: __init__.py
tools/geneticalgo/scenes/SOFIA/: SOFIA.py  controller.py  scene.pyscn  scene2.pyscn  shape2.py  show2Dshape.py
tools/geneticalgo/scenes/SOFIA_SECOND_VERSION/: MeshGenerationFromImplicit.h  MeshGenerationFromImplicit.scn  SOFIA.py  main.py  scene.pyscn  shape.py
tools/geneticalgo/scenes/accordion/: __init__.py  accordion.pyx  accordionutils.py  controller.py  customfield.py  main.py  scene.pyscn  scene2.pyscn  shape.py  shapeinv.py
tools/geneticalgo/scenes/crochet/: __init__.py  controller2.py  crochetutils.py  cylinder.stl  getShapeFromInd.py  main.py  scene.pyscn  scene2.pyscn  sceneHexahedron.pyscn  shapeinv.py  tests.py  triangulation.py
tools/pch/: dg++  (+3 more)
tools/sofalauncher/: CMakeLists.txt  launcher.py
(+431 files in other folders)
